--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@font-face {
+  font-family: "Bold";   /*Can be any text*/
+  src: local("NeueHaasDisplayBlack"),
+    url("./fonts/NeueHaasDisplayBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Medium";   /*Can be any text*/
+  src: local("NeueHaasDisplayMedium"),
+    url("./fonts/NeueHaasDisplayMedium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Light";   /*Can be any text*/
+  src: local("NeueHaasDisplayLight"),
+    url("./fonts/NeueHaasDisplayLight.ttf") format("truetype");
 }
